# kaleido

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
KaleidoAndroid/: settings.gradle.kts
KaleidoAndroid/app/: .gitignore  build.gradle.kts
KaleidoAndroid/app/src/main/: AndroidManifest.xml
KaleidoAndroid/app/src/main/cpp/: CMakeLists.txt  main.cpp
KaleidoAndroid/app/src/main/java/com/chzhang/kaleido/: MainActivity.java
KaleidoAndroid/app/src/main/res/layout/: activity_main.xml
KaleidoAndroid/app/src/main/res/values/: strings.xml  themes.xml
KaleidoAndroid/gradle/: libs.versions.toml
KaleidoAndroid/gradle/wrapper/: gradle-wrapper.properties
assets/shader_graph_nodes/: builtin_const_float.json  builtin_const_vec2.json  builtin_const_vec3.json  builtin_expression_generic.json  builtin_input_normal.json  builtin_input_time.json  builtin_input_uv.json  builtin_input_world_pos.json  builtin_math_add.json  builtin_math_cos.json  builtin_math_div.json  builtin_math_frac.json  builtin_math_lerp.json  builtin_math_mul.json  builtin_math_remap.json  builtin_math_saturate.json  builtin_math_sin.json  builtin_math_sub.json  builtin_noise_perlin3d.json  builtin_output_surface.json  builtin_param_float.json  builtin_vector_compose_vec3.json  builtin_vector_split_vec3_x.json  builtin_vector_split_vec3_y.json  builtin_vector_split_vec3_z.json
assets/shader_graphs/: time_noise.kshadergraph.json
docs/superpowers/plans/: 2026-04-16-pbr-material-semantic-encoder.md  2026-04-18-transform-scene-graph.md  2026-04-26-scene-tree-selection-outline-aabb.md  2026-04-27-editor-material-dock.md  2026-04-27-full-metallic-roughness-pbr-material-plan.md  2026-04-27-rendergraph-visualization-implementation.md  2026-04-28-shader-graph-material-v1-implementation.md  2026-04-29-shader-graph-v2a-ux-alignment-implementation.md  2026-04-29-shader-graph-v2bc-architecture-and-expression-implementation.md  2026-05-01-shader-graph-bugfix-batch-plan.md  2026-05-01-shader-graph-feature-update-batch-plan.md  2026-05-01-shader-graph-node-assetization-plan.md
docs/superpowers/specs/: 2026-04-16-pbr-material-system-design.md  2026-04-18-transform-scene-graph-design.md  2026-04-26-scene-tree-selection-outline-aabb-design.md  2026-04-27-editor-material-dock-design.md  2026-04-27-full-metallic-roughness-pbr-material-design.md  2026-04-27-rendergraph-visualization-design.md  2026-04-28-shader-graph-material-v1-design.md  2026-04-29-shader-graph-v2a-ux-alignment-design.md  2026-04-29-shader-graph-v2bc-architecture-and-expression-design.md
scripts/: compare_rendergraph_dot.py  compare_rendergraph_json.py  gen_builtin_shader_graph_nodes.py
shaders/: triangle.vert.glsl
src/: GuiRenderer.cpp  GuiRenderer.h  ProfilingTools.h  RenderBackend.h  RenderGraph.cpp  RenderGraph.h  RenderResourceManager.h  asset_paths.cpp  asset_paths.h  common.h  config.h  device.cpp  device.h  editor_scene_io.cpp  editor_scene_io.h  editor_scene_state.h  extern.cpp  graph_canvas_input.cpp  graph_canvas_input.h  kaleido.cpp  kaleido_editor.cpp  kaleido_runtime.cpp  kaleido_runtime.h  material_types.cpp  material_types.h  math.h  renderer.cpp  renderer.h  rendergraph_viz.cpp  rendergraph_viz.h  resources.cpp  resources.h  scene.cpp  scene.h  scene_transforms.cpp  scene_transforms.h  scenert.cpp  scenert.h  shader_graph_codegen_glsl.cpp  shader_graph_codegen_glsl.h  (+27 more)
src/shaders/: blit.comp.glsl  cluster.mesh.glsl  clustercull.comp.glsl  clustersubmit.comp.glsl  debugtext.comp.glsl  depthreduce.comp.glsl  drawcmd.comp.glsl  drawcull.comp.glsl  drawculllate.comp.glsl  editor_aabb_line.frag.glsl  editor_aabb_line.vert.glsl  final.comp.glsl  math.h  mesh.frag.glsl  mesh.frag.spv  mesh.h  mesh.vert.glsl  mesh.vert.spv  mesh_selection_outline.frag.glsl  mesh_sg_generated.inc.glsl  meshfvf.vert.glsl  meshfvf.vert.spv  meshlet.mesh.glsl  meshlet.mesh.spv  meshlet.task.glsl  meshlet.task.spv  shade.comp.glsl  shadow.comp.glsl  shadowblur.comp.glsl  taa.comp.glsl  tasksubmit.comp.glsl  transmission_resolve.comp.glsl  transparency_blend.frag.glsl  triangle.vert.glsl  triangle.vert.spv
testcases/ABeautifulGame/: scene.json
testcases/ABeautifulGame_AABB_Silhouette/: scene.json
testcases/ABeautifulGame_Material_Edit/: scene.json
testcases/ABeautifulGame_RenderGraph_Visualization/: rendergraph.expected.dot  rendergraph.expected.json  scene.json
testcases/ABeautifulGame_ShaderGraph_TimeNoise/: scene.json
tests/: CMakeLists.txt  editor_scene_io_smoke.cpp  graph_canvas_input_tests.cpp  shader_graph_codegen_tests.cpp  shader_graph_edge_delete_tests.cpp  shader_graph_editor_session_tests.cpp  shader_graph_io_tests.cpp  shader_graph_migration_tests.cpp  shader_graph_node_descriptor_tests.cpp  shader_graph_output_rules_tests.cpp  shader_graph_reachability_compile_tests.cpp  shader_graph_test_utils.h  shader_graph_type_link_tests.cpp  shader_graph_validate_tests.cpp  shader_reload_policy_tests.cpp  transform_graph_smoke.cpp
tools/: watch_shaders.py
